=head1 NAME

Bric::Changes - Bricolage Changes

=head1 DATE

$LastChangedDate$

=head1 DESCRIPTION

This document lists the Changes to Bricolage introduced with each release.

=head1 VERSION 1.10.5 (2008-??-??)

=head2 Improvements

=over

=item *

Added support for the JS-Quicktags WYSIWYG editor. [Greg Heo]

=item *

API doc corrections reported by Rod Taylor. [Scott]

=back

=head2 Bug Fixes

=over

=item *

Patch for codeselect. [Greg Heo]

=item *

Eliminated the display of the login screen in the side nav when C<NO_TOOLBAR>
is set to false and a session expires. Reported by Matt Rolf (Bug #921).
[David]

=item *

Worked around a bug in SOAP::Lite that only appears when used in conjunction with
LWP 5.810 and later. [David]

=item *

Fixed issue in F<db_grant.pl>, which was trying to grant permissions to a row
count. [Paul Orrock]

=item *

Fixed a bug when publishing or previewing a story with related media where an
error could occur when a media document was published to more than one output
channel with different URIs. Reported by Matt Wlazlo. [David]

=item *

Fixed an issue when a user with publish permission selects "Check in and
Publish" for a newly created document. Reported by Chris Heiland and Matt Rolf
(RT #1261). [David]

=item *

When creating a new media document from a related media element, if the user
clicks "Save" or "Save and Stay" instead of "Create", it will properly create
the related media document. [David]

=item *

When creating creating a new media document by uploading a file in a related
media element, clicking "Save", "Cancel", or "Check in" on the media profile
page now properly redirects back to the related media element profile. [David]

=back

=head1 VERSION 1.10.4 (2008-03-09)

=head2 Improvements

=over

=item *

Nicer use of the "Bricolage Instance Name" preference, now used on every page.
[Phillip Smith]

=item *

More German corrections. [Steffen Schwigon]

=item *

Documented the need to look at